<resources>
    <string name="AUTH_REQUIRE_TITLE">Authorization Required</string>
    <string name="CAMERA">Camera</string>
    <string name="CHOOSE_IMAGE">Choose image</string>
    <string name="CronetProviderClassName">com.google.android.gms.net.PlayServicesCronetProvider</string>
    <string name="DOWNLOAD_COMPLETED">Download Completed</string>
    <string name="DOWNLOAD_DESCRIPTION">Save file to the \"Downloads\" folder</string>
    <string name="DOWNLOAD_STARTED">Download started.</string>
    <string name="EXTERNAL_WRITE_PERMISSION_LACK">No external storage write permission.</string>
    <string name="FreeformWindowOrientation_landscape" />
    <string name="FreeformWindowOrientation_portrait" />
    <string name="FreeformWindowSize_maximize" />
    <string name="FreeformWindowSize_phone" />
    <string name="FreeformWindowSize_tablet" />
    <string name="INVALID_URL">Invalid URL</string>
    <string name="LOADING">Loading…</string>
    <string name="MEDIA_CAPTURE_PERMISSION_REQUEST">"Allow '%1$s' to access %2$s?"</string>
    <string name="MEDIA_CAPTURE_PERMISSION_REQUEST_TITLE">Permission Request</string>
    <string name="MICROPHONE">Microphone</string>
    <string name="PASSWORD">Password</string>
    <string name="SAVE_IMAGE">Save Image</string>
    <string name="USERNAME">Username</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="aihelp_chat_hint">Enter your message</string>
    <string name="aihelp_data_not_found_msg">Oops, no relevant data were found.</string>
    <string name="aihelp_data_retrieve_failed">Data acquisition failed</string>
    <string name="aihelp_faq_feedback">Please input your feedback</string>
    <string name="aihelp_faq_feedback_suggest">Suggestions</string>
    <string name="aihelp_faq_feedback_thanks">Thank you for the feedback.</string>
    <string name="aihelp_faq_fetching_faqs">Getting your answers…</string>
    <string name="aihelp_faq_search_empty">No FAQs found.</string>
    <string name="aihelp_faq_search_hint">Describe your problem</string>
    <string name="aihelp_friday">Friday</string>
    <string name="aihelp_media_upload_err_format">Unsupported files. Currently, only mp4, png, jpg, jpeg available when uploading.</string>
    <string name="aihelp_media_upload_err_size">The file size exceeds the limit, please upload the file smaller than %sM</string>
    <string name="aihelp_monday">Monday</string>
    <string name="aihelp_network_check_fine">After checking, your network is fine</string>
    <string name="aihelp_network_check_in_progress">Network checking is in progress. If you exit now, the checking will be interrupted.</string>
    <string name="aihelp_network_check_poor">Please confirm to send us network conditions, which will help us improve the quality of your network connection.</string>
    <string name="aihelp_network_checking">Network check is in progress</string>
    <string name="aihelp_network_error_msg">Oops! Something went wrong</string>
    <string name="aihelp_network_no_connect">Please check your network connection.</string>
    <string name="aihelp_network_upload_log_title">Poor network connection</string>
    <string name="aihelp_no">Cancel</string>
    <string name="aihelp_op_cs">HELP</string>
    <string name="aihelp_permission_denied">Upload image requires permission of accessing storage.</string>
    <string name="aihelp_permission_ignored">Please enable Settings > Permissions > Storage to use upload image function.</string>
    <string name="aihelp_permission_settings">Settings</string>
    <string name="aihelp_rate_additional_feedback_message">Any other feedback (optional)</string>
    <string name="aihelp_rate_app_hint">Would you like to review the App?</string>
    <string name="aihelp_rate_button">Rate</string>
    <string name="aihelp_rate_dissatisfied">Disliked it</string>
    <string name="aihelp_rate_finished">Thanks for rating us.</string>
    <string name="aihelp_rate_request">Please rate our service</string>
    <string name="aihelp_rate_satisfied">Liked it</string>
    <string name="aihelp_resolution_no">Unsolved</string>
    <string name="aihelp_resolution_request">Is your problem solved?</string>
    <string name="aihelp_resolution_yes">Solved</string>
    <string name="aihelp_saturday">Saturday</string>
    <string name="aihelp_send">Send</string>
    <string name="aihelp_storage_permission">Please enable storage permissions so that you can select images or videos to upload for feedback to customer service</string>
    <string name="aihelp_sunday">Sunday</string>
    <string name="aihelp_thursday">Thursday</string>
    <string name="aihelp_ticket_closed">The current customer complaint ticket has been closed.</string>
    <string name="aihelp_tuesday">Tuesday</string>
    <string name="aihelp_view_details">View Details</string>
    <string name="aihelp_wednesday">Wednesday</string>
    <string name="aihelp_yes">Confirm</string>
    <string name="aihelp_yesterday">Yesterday</string>
    <string name="android.credentials.TYPE_PASSWORD_CREDENTIAL">Password</string>
    <string name="androidx.credentials.TYPE_PUBLIC_KEY_CREDENTIAL">Passkey</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">UNO</string>
    <string name="applovin_agree_message">Please press \"Continue\" if you choose to start using our app.</string>
    <string name="applovin_alt_privacy_policy_text" />
    <string name="applovin_continue_button_text">Continue</string>
    <string name="applovin_creative_debugger_disabled_text">Enable the Creative Debugger SDK settings in order to view recent ads.</string>
    <string name="applovin_creative_debugger_no_ads_text">No recently displayed ads found.</string>
    <string name="applovin_list_item_image_description">Displays more info about the list item.</string>
    <string name="applovin_pp_and_tos_title">To use %s you must agree to our Terms &amp; Conditions and affirm you have reviewed our Privacy Policy</string>
    <string name="applovin_pp_title">To use %s you must affirm that you have reviewed and acknowledged our Privacy Policy.</string>
    <string name="applovin_privacy_policy_text">Privacy Policy</string>
    <string name="applovin_terms_of_service_text">Terms &amp; Conditions</string>
    <string name="applovin_terms_of_use_text">Terms of Use</string>
    <string name="apps_flyer_dev_key">qCWrc7L2pa8SbLEvonfmja</string>
    <string name="ayp_custom_action_left">YouTube player Custom action left</string>
    <string name="ayp_custom_action_right">YouTube player custom action right</string>
    <string name="ayp_full_screen_button">Full screen button</string>
    <string name="ayp_live">LIVE</string>
    <string name="ayp_null_time">0:00</string>
    <string name="ayp_open_video_in_youtube">Open video in YouTube</string>
    <string name="ayp_play_button">Play button</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="campaign.appName">getAppName</string>
    <string name="campaign.iconUrl">getIconUrl</string>
    <string name="campaign.imageUrl">getImageUrl</string>
    <string name="close_drawer">Close navigation menu</string>
    <string name="close_sheet">Close sheet</string>
    <string name="cloudpush_app_name">Push Service</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b>facebook.com/device&lt;/b> and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="mattel_continue">CONTINUE</string>
    <string name="mattel_enter_email_hint">Enter your email address</string>
    <string name="mattel_enter_password_hint">Enter your password</string>
    <string name="mattel_forgot_password">Forgot password</string>
    <string name="mattel_go_sign_up">NEW PLAYER? SIGN UP</string>
    <string name="mattel_welcome_back">Welcome!</string>
    <string name="n_sdk_logan_upload_2day">2 Days</string>
    <string name="n_sdk_logan_upload_7day">1 Week</string>
    <string name="n_sdk_logan_upload_content">Thank you for your help! When you send us your error logs, we can use it to make Our Game the best it can be and give you better service! How many days of error logs would you like to send us?</string>
    <string name="n_sdk_logan_upload_dialog_title">Feedback</string>
    <string name="n_sdk_logan_upload_today">1 Day</string>
    <string name="n_sdk_logan_wifi_tips">We recommend using a WIFI connection.</string>
    <string name="n_sdk_mattel163_id">ID: %s</string>
    <string name="n_sdk_personal_data_request">Account/Personal Data Request</string>
    <string name="n_sdk_personal_data_request_content_1">You have the option to request to download or delete the data Mattel163 stores regarding your account.</string>
    <string name="n_sdk_personal_data_request_content_2">To initiate a personal data request, please visit privacy.mattel163.com.</string>
    <string name="n_sdk_pin">PIN: %s</string>
    <string name="n_sdk_sure_transfer">Confirm</string>
    <string name="n_sdk_transfer_account">Transferring your account</string>
    <string name="n_sdk_transfer_account_content_1">You can enter the transfer code generated by the original account to transfer the data and progress of that account to this account.</string>
</resources>