<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@id/view_container" android:background="@android:color/white" android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <View android:id="@id/view2" android:background="@drawable/mattel_pattern_bg_vertical" android:layout_width="fill_parent" android:layout_height="119.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <View android:id="@id/btn_close" android:background="@drawable/mattel_btn_close_selector" android:layout_width="@dimen/mattel_close_btn_size" android:layout_height="@dimen/mattel_close_btn_size" android:layout_marginTop="12.0dip" android:layout_marginRight="14.0dip" android:onClick="onClick" android:layout_marginEnd="14.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <View android:id="@id/btn_contact" android:background="@drawable/mattel_btn_contact_selector" android:layout_width="@dimen/mattel_contact_btn_size" android:layout_height="@dimen/mattel_contact_btn_size" android:layout_marginRight="10.0dip" android:layout_alignTop="@id/btn_close" android:onClick="onClick" android:layout_marginEnd="10.0dip" app:layout_constraintEnd_toStartOf="@id/btn_close" app:layout_constraintTop_toTopOf="@id/btn_close" />
    <ImageView android:id="@id/iv_logo" android:background="@android:color/white" android:padding="4.0dip" android:layout_width="94.0dip" android:layout_height="94.0dip" android:layout_marginTop="66.0dip" android:src="@drawable/mattel_logo" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <EditText android:id="@id/et_account" android:layout_marginTop="24.0dip" android:hint="@string/mattel_enter_email_hint" android:inputType="textWebEmailAddress" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_welcome" style="@style/InputEditStyle" />
    <EditText android:textSize="@dimen/mattel_edit_text_size" android:textColorHint="@color/hint_text_color" android:gravity="center" android:id="@id/et_password" android:background="@drawable/mattel_form" android:paddingLeft="40.0dip" android:paddingRight="40.0dip" android:layout_width="fill_parent" android:layout_height="39.0dip" android:layout_marginLeft="41.0dip" android:layout_marginTop="12.0dip" android:layout_marginRight="41.0dip" android:hint="@string/mattel_enter_password_hint" android:inputType="textPassword" android:layout_marginStart="41.0dip" android:layout_marginEnd="41.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/et_account" />
    <ImageView android:id="@id/iv_eye" android:padding="10.0dip" android:layout_width="39.0dip" android:layout_height="39.0dip" android:src="@drawable/mattel_password_eye_selector" android:scaleType="fitXY" android:onClick="onClick" app:layout_constraintBottom_toBottomOf="@id/et_password" app:layout_constraintEnd_toEndOf="@id/et_password" app:layout_constraintTop_toTopOf="@id/et_password" />
    <TextView android:textSize="24.0dip" android:textColor="@color/title_text_color" android:layout_gravity="center_horizontal" android:id="@id/tv_welcome" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="14.0dip" android:text="@string/mattel_welcome_back" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/iv_logo" />
    <TextView android:textSize="14.0dip" android:textColor="@color/forget_password_text_color" android:layout_gravity="center_horizontal" android:id="@id/tv_forgot_password" android:padding="1.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:text="@string/mattel_forgot_password" android:onClick="onClick" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/et_password" />
    <Button android:layout_gravity="center_horizontal" android:id="@id/btn_login" android:text="@string/mattel_continue" android:onClick="onClick" app:layout_constraintBottom_toTopOf="@id/btn_go_sign_up" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.493" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_forgot_password" app:layout_constraintVertical_bias="0.262" style="@style/ContinueButtonStyle" />
    <Button android:textSize="18.0dip" android:textColor="@color/btn_go_sign_up_text_color" android:id="@id/btn_go_sign_up" android:background="@drawable/bg_mattel_white_button" android:layout_width="fill_parent" android:layout_height="47.0dip" android:layout_marginLeft="42.0dip" android:layout_marginRight="42.0dip" android:layout_marginBottom="24.0dip" android:text="@string/mattel_go_sign_up" android:layout_alignParentBottom="true" android:onClick="onClick" android:layout_marginStart="42.0dip" android:layout_marginEnd="42.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
