<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:background="@drawable/n_sdk_bg_logan_upload_dialog" android:layout_width="@dimen/n_sdk_width_logan_upload_dialog" android:layout_height="wrap_content" android:layout_centerInParent="true" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
        <View android:id="@id/top_view" android:background="@drawable/n_sdk_bg_logan_upload_dialog_top_view" android:layout_width="0.0dip" android:layout_height="@dimen/n_sdk_height_logan_upload_dialog_top_view" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <Button android:textColor="@android:color/white" android:id="@id/btn_upload_today" android:background="@drawable/n_sdk_bg_red_button_selector" android:layout_width="wrap_content" android:layout_height="@dimen/n_sdk_height_logan_upload_button" android:layout_marginLeft="24.0dip" android:layout_marginTop="8.0dip" android:minWidth="120.0dip" android:text="@string/n_sdk_logan_upload_today" android:textAllCaps="false" android:layout_marginStart="24.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_logan_upload_content" />
        <Button android:textColor="@android:color/white" android:id="@id/btn_upload_2day" android:background="@drawable/n_sdk_bg_red_button_selector" android:layout_width="wrap_content" android:layout_height="@dimen/n_sdk_height_logan_upload_button" android:layout_marginRight="24.0dip" android:minWidth="120.0dip" android:text="@string/n_sdk_logan_upload_2day" android:textAllCaps="false" android:layout_marginEnd="24.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="@id/btn_upload_today" />
        <Button android:textColor="@android:color/white" android:id="@id/btn_upload_7day" android:background="@drawable/n_sdk_bg_red_button_selector" android:layout_width="wrap_content" android:layout_height="@dimen/n_sdk_height_logan_upload_button" android:layout_marginTop="8.0dip" android:minWidth="120.0dip" android:text="@string/n_sdk_logan_upload_7day" android:textAllCaps="false" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/btn_upload_today" />
        <ImageView android:id="@id/iv_close" android:padding="2.0dip" android:layout_width="22.0dip" android:layout_height="22.0dip" android:layout_marginRight="8.0dip" android:src="@drawable/n_sdk_ic_close_selector" android:layout_marginEnd="8.0dip" app:layout_constraintBottom_toBottomOf="@id/top_view" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="@id/top_view" />
        <ImageView android:id="@id/iv_upload" android:layout_width="30.0dip" android:layout_height="30.0dip" android:layout_marginTop="4.0dip" android:src="@drawable/n_sdk_upload_icon" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/top_view" />
        <TextView android:textSize="14.0dip" android:textColor="@android:color/white" android:id="@id/tv_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/n_sdk_logan_upload_dialog_title" app:layout_constraintBottom_toBottomOf="@id/top_view" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@id/top_view" />
        <TextView android:textSize="14.0dip" android:textColor="@android:color/black" android:id="@id/tv_logan_upload_content" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="4.0dip" android:layout_marginRight="16.0dip" android:text="@string/n_sdk_logan_upload_content" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/iv_upload" />
        <TextView android:textSize="12.0dip" android:textColor="@color/n_sdk_hint_text_color" android:id="@id/tv_wifi_tips" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="16.0dip" android:text="@string/n_sdk_logan_wifi_tips" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/btn_upload_7day" />
        <TextView android:textSize="10.0dip" android:textColor="@color/n_sdk_hint_text_color" android:id="@id/tv_udid" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="8.0dip" android:layout_marginBottom="8.0dip" android:text="UDID: " android:layout_marginStart="16.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_wifi_tips" />
        <ImageView android:id="@id/iv_copy" android:paddingTop="5.0dip" android:paddingRight="5.0dip" android:paddingBottom="5.0dip" android:layout_width="wrap_content" android:layout_height="25.0dip" android:src="@drawable/n_sdk_ic_copy" android:paddingEnd="5.0dip" app:layout_constraintBottom_toBottomOf="@id/tv_udid" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.032" app:layout_constraintStart_toEndOf="@id/tv_udid" app:layout_constraintTop_toTopOf="@id/tv_udid" app:layout_constraintVertical_bias="0.5" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>
