<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:background="@drawable/n_sdk_bg_personal_data_request_dialog" android:layout_width="@dimen/n_sdk_personal_data_request_dialog_width" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
        <View android:id="@id/top_view" android:background="@drawable/n_sdk_bg_personal_data_request_dialog_top_view" android:layout_width="0.0dip" android:layout_height="40.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <ImageView android:id="@id/iv_close" android:padding="2.0dip" android:layout_width="22.0dip" android:layout_height="22.0dip" android:layout_marginRight="8.0dip" android:src="@drawable/n_sdk_ic_close_selector" android:layout_marginEnd="8.0dip" app:layout_constraintBottom_toBottomOf="@id/top_view" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="@id/top_view" />
        <TextView android:textSize="@dimen/n_sdk_text_size_data_request_title" android:textStyle="bold" android:textColor="@android:color/white" android:gravity="center" android:id="@id/tv_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="32.0dip" android:layout_marginRight="32.0dip" android:text="@string/n_sdk_personal_data_request" android:layout_marginStart="32.0dip" android:layout_marginEnd="32.0dip" app:layout_constraintBottom_toBottomOf="@id/top_view" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:textSize="14.0dip" android:textColor="@android:color/black" android:gravity="center" android:id="@id/tv_content_1" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginTop="24.0dip" android:layout_marginRight="8.0dip" android:text="@string/n_sdk_personal_data_request_content_1" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_title" />
        <TextView android:textSize="14.0dip" android:textColor="@android:color/black" android:gravity="center" android:id="@id/tv_content_2" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginTop="16.0dip" android:layout_marginRight="8.0dip" android:text="@string/n_sdk_personal_data_request_content_2" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_content_1" />
        <TextView android:textSize="14.0dip" android:textStyle="bold" android:textColor="@android:color/black" android:gravity="center" android:id="@id/tv_mattel_id" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginTop="16.0dip" android:layout_marginRight="8.0dip" android:text="@string/n_sdk_mattel163_id" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_content_2" />
        <TextView android:textSize="14.0dip" android:textStyle="bold" android:textColor="@android:color/black" android:gravity="center" android:id="@id/tv_pin" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="8.0dip" android:text="@string/n_sdk_pin" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_mattel_id" />
        <TextView android:textSize="@dimen/n_sdk_text_size_data_request_button" android:textStyle="bold" android:textColor="@drawable/n_sdk_blue_text_color_selector" android:gravity="center" android:id="@id/tv_sure" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginTop="16.0dip" android:layout_marginRight="8.0dip" android:layout_marginBottom="24.0dip" android:text="@string/n_sdk_personal_data_request" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_pin" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
