<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@android:color/transparent" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:background="@drawable/n_sdk_bg_transfer_account_dialog" android:layout_width="@dimen/n_sdk_width_migrate_dialog" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
        <Button android:textColor="@android:color/white" android:id="@id/btn_migrate" android:background="@drawable/n_sdk_bg_red_button_selector" android:layout_width="wrap_content" android:layout_height="35.0dip" android:layout_marginTop="24.0dip" android:layout_marginBottom="24.0dip" android:minWidth="120.0dip" android:text="@string/n_sdk_sure_transfer" android:textAllCaps="false" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/et_code" />
        <EditText android:textSize="14.0dip" android:textColorHint="@color/n_sdk_hint_text_color" android:id="@id/et_code" android:background="@drawable/n_sdk_mattel_form" android:padding="10.0dip" android:layout_width="0.0dip" android:layout_height="39.0dip" android:layout_marginLeft="24.0dip" android:layout_marginTop="16.0dip" android:layout_marginRight="24.0dip" android:maxWidth="240.0dip" android:hint="输入转移码" android:maxLines="1" android:maxLength="20" android:digits="1234567890ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz" android:inputType="textEmailAddress" android:layout_marginStart="24.0dip" android:layout_marginEnd="24.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_content" />
        <TextView android:textSize="14.0dip" android:textColor="@android:color/white" android:gravity="center" android:id="@id/tv_title" android:background="@drawable/n_sdk_bg_transfer_account_dialog_top_view" android:layout_width="0.0dip" android:layout_height="40.0dip" android:text="@string/n_sdk_transfer_account" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <ImageView android:id="@id/iv_close" android:padding="2.0dip" android:layout_width="22.0dip" android:layout_height="22.0dip" android:layout_marginRight="8.0dip" android:src="@drawable/n_sdk_ic_close_selector" android:layout_marginEnd="8.0dip" app:layout_constraintBottom_toBottomOf="@id/tv_title" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="@id/tv_title" />
        <TextView android:textColor="@android:color/black" android:gravity="center" android:id="@id/tv_content" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginTop="16.0dip" android:layout_marginRight="24.0dip" android:text="@string/n_sdk_transfer_account_content_1" android:layout_marginStart="24.0dip" android:layout_marginEnd="24.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_title" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
